--- a/src/app/pages/staking/staking.styles.scss
+++ b/src/app/pages/staking/staking.styles.scss
@@ -1,7 +1,6 @@
 .staking {
   display: flex;
   flex-direction: column;
-  height: 100%;
   margin: 0 auto;
   padding: 0;
   align-items: center;
@@ -11,6 +10,118 @@
 
   }
 
+  label {
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #FFFFFF;
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  &__button {
+    max-width: 165px;
+    background: linear-gradient(93.74deg, #09BECA -12.52%, #9A68F3 125.6%);
+    border-radius: 10px;
+    padding: 10px 0;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 27px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-top: 30px;
+    opacity: 1;
+    border: 0;
+    cursor: pointer;
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+  }
+  
+  &__checkbox {
+    margin-right: 8px;
+  }
+
+  &__input {
+    background: #393F5A;
+    box-shadow: 0px 4px 10px rgba(38, 47, 91, 0.5);
+    border-radius: 10px;
+    border: 0;
+    padding: 14px 20px;
+    color: white;
+  }
+
+  &__info {
+    background: #202742;
+    border-radius: 10px;
+    padding: 30px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+
+    @include tablet {
+      flex-direction: column;
+    }
+  }
+
+  &__info-right {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+
+    @include tablet {
+      margin-top: 40px;
+      width: auto;
+    }
+  }
+
+  &__info-heading {
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 33px;
+    color: #FFFFFF;
+    margin: 0 0 15px;
+
+    @include tablet {
+      font-size: 18px;
+      line-height: 26px;
+    }
+  }
+
+  &__info-item {
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+
+    @include tablet {
+      color: #fff;
+      display: flex;
+      justify-content: space-between;
+      font-size: 12px;
+      line-height: 22px;
+    }
+
+    &:not(:last-of-type) {
+      margin-bottom: 8px;
+    }
+
+    span {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 27px;
+      color: #FFFFFF;
+
+      @include tablet {
+        font-size: 14px;
+        line-height: 22px;
+      }
+    }
+  }
+
   &__wrapper {
     display: flex;
     flex-direction: column;
@@ -18,12 +129,12 @@
     position: relative;
     max-width: 1260px;
     width: calc(100% - 60px);
-    padding: 50px 30px;
-    height: 100%;
+    padding: 50px 30px 60px;
 
     @include tablet {
       width: calc(100% - 40px);
       padding: 0 20px;
+      margin: 50px 0 0;
     }
   }
   
@@ -73,7 +184,7 @@
     z-index: 228;
 
     @include tablet {
-      padding: 30px 30px;
+      padding: 20px 14px;
     }
   }
 
@@ -99,6 +210,7 @@
   }
 
   &__option {
+    -webkit-tap-highlight-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -137,6 +249,17 @@
         top: -1px;
         width: 40px;
         height: 40px;
+
+        @include tablet {
+          content: "";
+          background: url(mark.svg);
+          position: absolute;
+          right: 0px;
+          top: 0px;
+          width: 20px;
+          height: 20px;
+          background-size: contain;
+        }
       }
     }
 
