--- a/src/app/pages/staking/staking.styles.scss
+++ b/src/app/pages/staking/staking.styles.scss
@@ -72,6 +72,15 @@
     display: flex;
     flex-direction: column;
     width: 50%;
+    position: relative;
+
+    & > svg {
+      top: 8px;
+      right: 20px;
+      position: absolute;
+      width: 30px;
+      height: 30px;
+    }
 
     @include tablet {
       margin-top: 40px;
@@ -139,6 +148,7 @@
   }
   
   &__back {
+    display: none;
     position: absolute;
     margin: 0 !important;
     bottom: -440px;
@@ -197,6 +207,8 @@
 
     @include tablet {
       margin: 0 0 10px;
+      font-size: 18px;
+      line-height: 30px;
     }
   }
 
@@ -304,6 +316,11 @@
     text-align: center;
     color: #FFFFFF;
     margin: 0;
+
+    @include tablet {
+      font-size: 16px;
+      line-height: 22px;
+    }
   }
 
   &__option-description {
@@ -313,5 +330,11 @@
     text-align: center;
     color: #FFFFFF;
     margin: 6px 0 0;
+  }
+
+  .form-control {
+    svg {
+      position: absolute;
+    }
   }
 }
