--- a/src/app/components/carousel/carousel.styles.scss
+++ b/src/app/components/carousel/carousel.styles.scss
@@ -131,7 +131,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 27px;
-    margin: 30px 0 0;
+    margin: 0 0 0;
 
     @include tablet {
       font-size: 16px;
