--- a/src/app/components/roadmap/roadmap.styles.scss
+++ b/src/app/components/roadmap/roadmap.styles.scss
@@ -49,10 +49,10 @@
     // transition: opacity 1s cubic-bezier(0.16, 1, 0.3, 1),transform 1s cubic-bezier(0.16, 1, 0.3, 1);
     // transform: translateX(-15px);
 
-    &.active {
-      // transform: translateX(0);
-      // opacity: 1;
-    }
+    // &.active {
+    //   // transform: translateX(0);
+    //   // opacity: 1;
+    // }
 
     @include tablet {
       font-size: 36px;
