--- a/src/app/components/header/header.styles.scss
+++ b/src/app/components/header/header.styles.scss
@@ -34,7 +34,7 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      justify-content: flex-end;
+      justify-content: space-between;
 
       .logo-wrapper {
         z-index: 60;
